build: release 25.10.4